# fusion

./: Cargo.toml
docs/: engine_api.md  evaluation_parameter_reference.md  search_parameters_and_formulas.md
fixtures/perft/: baselines.txt
scripts/: pgo-build.sh
src/: analysis.rs  attack.rs  bag.rs  board.rs  eval.rs  gen.rs  header.rs  move_buffer.rs  movegen.rs  pathfinder.rs  perft.rs  search.rs  search_config.rs  search_expand.rs  state.rs  wasm.rs  wasm_types.rs
tests/: e2e_validation.rs  perft.rs  presim_validation.rs
